--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public/assets",
+                "output": "assets"
               }
             ],
             "styles": [
@@ -88,10 +89,9 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/public/assets",
+                "input": "public/assets",
                 "output": "assets"
-              },
-             
+              },  
               "src/favicon.ico"
             ],
             "styles": [
